--- a/src/Avalonia.Samples/Drawing/RectPainter2/ReactiveUI/RectPainter/RectPainter.csproj
+++ b/src/Avalonia.Samples/Drawing/RectPainter2/ReactiveUI/RectPainter/RectPainter.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="ReactiveUI.Avalonia" Version="11.3.8" />
     <PackageReference Include="System.Text.Json" Version="10.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controls\" />
+  </ItemGroup>
 </Project>
